--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body {
-    background: ForestGreen;
-    text-align: center;
-    overflow: hidden;
-    margin: 0;
+  background: ForestGreen;
+  text-align: center;
+  overflow: hidden;
+  margin: 0;
 }
 
-#myCanvas {
-    background-color: lightgray;
+#carCanvas {
+  background-color: lightgray;
+}
+
+#networkCanvas {
+  background-color: black;
 }
